# fastapi-django-orm

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
fastapi_django_orm/: celery_app.py  celeryconfig.py  main.py  manage.py
fastapi_django_orm/main_app/admin/: __init__.py  base.py  demo.py
fastapi_django_orm/main_app/endpoints/: __init__.py  redirect.py  router.py
fastapi_django_orm/main_app/endpoints/demo/: __init__.py  read.py  router.py
fastapi_django_orm/main_app/endpoints/internal/: __init__.py  healthz.py
fastapi_django_orm/main_app/migrations/: 0001_initial.py
fastapi_django_orm/main_app/models/: __init__.py  base.py  demo.py
fastapi_django_orm/main_app/operations/: __init__.py
fastapi_django_orm/main_app/operations/demo/: read.py
fastapi_django_orm/main_app/schemas/: __init__.py  base.py  demo.py  healthz.py
fastapi_django_orm/mysite/: asgi.py  config.py  logs.py  middleware.py  wsgi.py
fastapi_django_orm/mysite/errors/: handlers.py  http_errors.py
fastapi_django_orm/mysite/settings/: base.py
yumgo_python_template/: apps.py  celery_app.py  celeryconfig.py  main.py  manage.py  middleware.py  settings.py
yumgo_python_template/config/: asgi.py  urls.py  wsgi.py
yumgo_python_template/config/settings/: __init__.py  base.py  local.py  prod.py
yumgo_python_template/endpoints/: __init__.py  redirect.py  router.py
yumgo_python_template/endpoints/internal/: healthz.py  router.py
yumgo_python_template/errors/: __init__.py  base.py  database_errors.py  responses.py
yumgo_python_template/schemas/: healthz.py
yumgo_python_template/tasks/: __init__.py
